tests/fsharp/typecheck/sigs/neg91.bsl

neg91.fs(7,16,7,30): typecheck error FS0896: Enumerations cannot have members

neg91.fs(10,10,10,15): typecheck error FS0956: Members that extend interface, delegate or enum types must be placed in a module separate to the definition of the type. This module must either have the AutoOpen attribute or be opened explicitly by client code to bring the extension members into scope.
